fix map overlap

--- a/theme_src/scss/organisms/gridMap.scss
+++ b/theme_src/scss/organisms/gridMap.scss
@@ -2,7 +2,7 @@
   display: grid;
   @extend %heightViewport;
   @extend %horizontalGrid;
-  grid-template-rows: 55vh 35vh;
+  grid-template-rows: auto auto;
   @include smUp {
     // min for both rows is 350px
     // first row max: 100% viewport height - 50px menu bar - 350px chart zone height
